--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="produtos.html">Produtos</a></li>
+					<li><a href="produtoskkkk.html">Produtos</a></li>
 					<li><a href="Contato.html">Contato</a></li>
 				</ul>
 			</nav>
